# programmiersprachen-aufgabenblatt-4

./: CMakeLists.txt
source/: CMakeLists.txt  TestList.cpp  aufgabe_11.cpp  aufgabe_13.cpp  aufgabe_2_und_3.cpp  aufgabe_4.cpp  aufgabe_6.cpp  aufgabe_9.cpp  circle.cpp  circle.hpp  clock.cpp  color.hpp  example.cpp  filter.cpp  list.hpp  list_alt.hpp  mat2.cpp  mat2.hpp  rectangle.cpp  rectangle.hpp  tests.cpp  vec2.cpp  vec2.hpp
