# Build aufgabe 2 und 3
add_executable(aufgabe_2_und_3
  aufgabe_2_und_3.cpp
  )

  # Build aufgabe 4
add_executable(aufgabe_4
  aufgabe_4.cpp
  circle.cpp
  )
 
 # Build aufgabe 6
add_executable(aufgabe_6
  aufgabe_6.cpp
  circle.cpp
  )

   # Build aufgabe 9
add_executable(aufgabe_9
  aufgabe_9.cpp
  )

    # Build aufgabe 11
add_executable(aufgabe_11
  aufgabe_11.cpp
  )

      # Build aufgabe 13
add_executable(aufgabe_13
  aufgabe_13.cpp
  )
